Update dependencies and enhance CORS middleware configuration
- Updated dependencies in go.sum, including upgrades for bytedance/sonic, gabriel-vasile/mimetype, gin-gonic/gin, and others.
- Replaced custom CORS middleware with gin-contrib/cors for improved configuration and maintainability.
- Updated Swagger host to 100.102.208.55 and added support for both HTTP and HTTPS schemes.
